--- a/css/styles.css
+++ b/css/styles.css
@@ -217,6 +217,7 @@ ol {
 /*==========HERO===========*/
 
 .hero {
+  /* position: relative; */
   background-color: var(--hero-bground);
   max-width: 1600px;
   min-height: 600px;
@@ -272,6 +273,43 @@ ol {
 .hero-btn:focus {
   background: var(--accent-btn-color);
 }
+/*===Modal window===*/
+.modal {
+  position: fixed;
+    min-width: 592px;
+    min-height: 581px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    border-radius: 4px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    
+    outline: 1px solid red;
+  }
+.close-button {
+position: absolute;
+right: 8px;
+top: 8px;
+}
+
+.backdrop.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+  }
+
+  .backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+    outline: 1px solid green;
+  }
+  
+
 /*=========HERO END========*/
 
 /*======OUR SPECIATILY=====*/
