--- a/css/styles.css
+++ b/css/styles.css
@@ -302,6 +302,7 @@ ol {
 .hero-btn:focus {
   background-color: var(--accent-btn-color);
 }
+
 /*===Modal window===*/
 
 .modal {
@@ -335,7 +336,6 @@ ol {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
-    outline: 1px solid green;
   }
   
 
@@ -797,7 +797,28 @@ z-index: 1;
 .cards-project-overlay:hover {
  transform: translateY(-100%); 
  transition-duration: 500ms;
-} */
+} 
+КАК ПРИМЕР
+.backdrop.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+  }
+
+  .backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+  }
+
+
+*/
+
+
+
 
 /*тут будет анимация*/
 .cadrs-list-item:hover,
