--- a/css/styles.css
+++ b/css/styles.css
@@ -760,7 +760,11 @@ ol {
   padding-bottom: var(--section-inner-padding);
 }
 
-.cadrs-list-item {
+.cards-image {
+    max-width: 100%;
+}
+
+.cards-list-item {
   position: relative;
   display: flex;
   flex-basis: calc(100% / 3 - var(--card-set-gap));
@@ -772,15 +776,17 @@ ol {
   transition-property: box-shadow;
   transition-duration: var(--accent-duration);
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0;
 }
 
-.cards-image {
-    max-width: 100%;
-}
-/* 
-.cards-project-over {
+/*---Синий оверлей с текстом---*/
+.cards-img-overlay {
 position: absolute;
-top: 146%;
+/* opacity: 0; */
+/* visibility: hidden;
+pointer-events: none; */
+pointer-events: none;
+bottom: -46%; /*проверить позиционирование*/
 left: 0;
 width: 100%;
 padding: 63px 24px;
@@ -790,39 +796,20 @@ font-size: 18px;
 line-height: 1.56;
 letter-spacing: 0.03em;
 color: var(--primary-white-color);
-transform: translateY(-100%);
-z-index: 1;
-} */
-/* 
-.cards-project-overlay:hover {
- transform: translateY(-100%); 
- transition-duration: 500ms;
+  transition-property: transform;
+  transition-duration: var(--accent-duration);
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 100ms;
 } 
-КАК ПРИМЕР
-.backdrop.is-hidden {
-  visibility: hidden;
-  opacity: 0;
-  pointer-events: none;
-  }
+ 
+.cards-list-item:hover .cards-img-overlay {
+ transform: translateY(-100%);
+ /* visibility: visible;
+    opacity: 1; */
+}
 
-  .backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
-  }
-
-
-*/
-
-
-
-
-/*тут будет анимация*/
-.cadrs-list-item:hover,
-.cadrs-list-item:focus {
+.cards-list-item:hover,
+.cards-list-item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
   }
