--- a/css/styles.css
+++ b/css/styles.css
@@ -303,26 +303,7 @@ ol {
   background-color: var(--accent-btn-color);
 }
 
-/*===Modal window===*/
-
-.modal {
-    position: fixed;
-    min-width: 528px;
-    min-height: 581px;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    background-color: var(--primary-white-color);
-    border-radius: 4px;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  }
-
-.close-button {
-    position: absolute;
-    right: 8px;
-    top: 8px;
-}
-
+/*===Backdrop & Modal window===*/
 .backdrop.is-hidden {
   visibility: hidden;
   opacity: 0;
@@ -337,6 +318,36 @@ ol {
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
   }
+.modal {
+    position: fixed;
+    min-width: 528px;
+    min-height: 581px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: var(--primary-white-color);
+    border-radius: 4px;
+    z-index: 5;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  }
+
+.close-button {
+  display: block;  
+  position: absolute;
+    right: 8px;
+    top: 8px;
+    font-family: inherit;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  box-sizing: border-box;
+  background: var(--primary-white-color);
+  min-width: 30px;
+  padding-left: -6px;
+  padding-right: -6px;
+cursor: pointer;
+}
+
+
   
 
 /*=========HERO END========*/
@@ -418,6 +429,7 @@ ol {
 
 .our-activities-item {
   position: relative;
+  z-index: -1;
   display: flex;
   margin-left: 30px;
   margin-top: 30px;
@@ -758,14 +770,9 @@ ol {
   margin-left: calc(-1 * var(--card-set-gap));
   margin-top: calc(-1 * var(--card-set-gap));
   padding-bottom: var(--section-inner-padding);
-}
-
-.cards-image {
-    max-width: 100%;
-}
+  }
 
 .cards-list-item {
-  position: relative;
   display: flex;
   flex-basis: calc(100% / 3 - var(--card-set-gap));
   background: var(--primary-white-color);
@@ -776,17 +783,18 @@ ol {
   transition-property: box-shadow;
   transition-duration: var(--accent-duration);
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-delay: 0;
 }
+
+.cards-image {
+  position: relative;  
+  max-width: 100%;
+  overflow: hidden;
+    }
 
 /*---Синий оверлей с текстом---*/
 .cards-img-overlay {
 position: absolute;
-/* opacity: 0; */
-/* visibility: hidden;
-pointer-events: none; */
-pointer-events: none;
-bottom: -46%; /*проверить позиционирование*/
+top: 100%; 
 left: 0;
 width: 100%;
 padding: 63px 24px;
@@ -804,8 +812,6 @@ color: var(--primary-white-color);
  
 .cards-list-item:hover .cards-img-overlay {
  transform: translateY(-100%);
- /* visibility: visible;
-    opacity: 1; */
 }
 
 .cards-list-item:hover,
