--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
 /*Шрифт логотипа WebStudio - Raleway*/
 /*Внутренний отступ в секциях 94рх*/
 /*Отступ между карточками в Протфолио*/
+/*Продолжительность перехода ховера - 250ms*/
 
 :root {
   --title-text-color: #212121;
@@ -104,6 +105,47 @@ ol {
   /* outline: 1px solid orange; */
 }
 
+/*===Backdrop & Modal window===*/
+.backdrop.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+  }
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.2);
+    transition: background-color, 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    min-width: 528px;
+    min-height: 580px;
+    background-color: var(--primary-white-color);
+    border-radius: 4px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  }
+
+.close-button {
+  position: absolute;
+  top: 8px;  
+  right: 8px;
+  width: 30px;  
+  height: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background: var(--primary-white-color);
+  cursor: pointer;
+}
+
 /*=========HEADER========*/
 
 .page-header {
@@ -184,7 +226,6 @@ ol {
    margin-left: 50px;
 }
 
-
 .header-mail-tel {
   display: flex;
   align-items: center;
@@ -222,7 +263,6 @@ ol {
 .contact-link:hover,
 .contact-link:focus {
   color: var(--accent-color);
-  
 }
 
 .email-icon {
@@ -243,7 +283,6 @@ ol {
 /*==========HERO===========*/
 
 .hero {
-  /* position: relative; */
   background-color: var(--hero-bground);
   max-width: 1600px;
   min-height: 600px;
@@ -302,53 +341,6 @@ ol {
 .hero-btn:focus {
   background-color: var(--accent-btn-color);
 }
-
-/*===Backdrop & Modal window===*/
-.backdrop.is-hidden {
-  visibility: hidden;
-  opacity: 0;
-  pointer-events: none;
-  }
-
-  .backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
-  }
-.modal {
-    position: fixed;
-    min-width: 528px;
-    min-height: 581px;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    background-color: var(--primary-white-color);
-    border-radius: 4px;
-    z-index: 5;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  }
-
-.close-button {
-  display: block;  
-  position: absolute;
-    right: 8px;
-    top: 8px;
-    font-family: inherit;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
-  box-sizing: border-box;
-  background: var(--primary-white-color);
-  min-width: 30px;
-  padding-left: -6px;
-  padding-right: -6px;
-cursor: pointer;
-}
-
-
-  
 
 /*=========HERO END========*/
 
@@ -543,7 +535,13 @@ cursor: pointer;
 
 .social-link-icon {
   fill: currentColor;
-  /* color: #afb1b8; */
+}
+
+.social-link-icon:hover,
+.social-link-icon:focus {
+  transition-property:  fill;
+  transition-duration: var(--accent-duration);
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link:hover,
@@ -551,8 +549,10 @@ cursor: pointer;
   background-color: var(--accent-color);
   color: #fff;
 }
+
 /*=====OUR TEAM END======*/
 /*=====REGULAR CUSTOMERS=====*/
+
 .customers {
   background: var(--primary-white-color);
   padding-top: var(--section-inner-padding);
@@ -703,7 +703,7 @@ cursor: pointer;
   border-radius: 50%;
   color: var(--primary-white-color);
   background-color: rgba(255, 255, 255, 0.1);
-  transition-property: background-color;
+  transition-property: color, background-color;
   transition-duration: var(--accent-duration);
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -785,6 +785,11 @@ cursor: pointer;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.cards-list-link:hover .cards-img-overlay,
+.cards-list-link:focus .cards-img-overlay {
+transform: translateY(-100%);
+}
+
 .cards-image {
   position: relative;  
   max-width: 100%;
@@ -809,10 +814,6 @@ color: var(--primary-white-color);
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-delay: 100ms;
 } 
- 
-.cards-list-item:hover .cards-img-overlay {
- transform: translateY(-100%);
-}
 
 .cards-list-item:hover,
 .cards-list-item:focus {
